--- a/app/src/main/res/layout/fragment_add_room_type.xml
+++ b/app/src/main/res/layout/fragment_add_room_type.xml
@@ -932,9 +932,9 @@
         <FrameLayout
             android:id="@+id/createRoomFragContainer"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:visibility="gone"
-            android:layout_marginBottom="10dp"
+            android:layout_marginBottom="20dp"
             android:layout_marginHorizontal="20dp"
             android:background="@drawable/corner_bottom_white_background"
             app:layout_constraintVertical_bias="0.0"
