--- a/app/src/main/res/layout/fragment_charges_and_rates.xml
+++ b/app/src/main/res/layout/fragment_charges_and_rates.xml
@@ -422,7 +422,7 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/card1"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         style="@style/CardViewTheme"
         app:cardCornerRadius="12dp"
         app:cardElevation="4dp"
@@ -490,15 +490,14 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerView"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
                 tools:listitem="@layout/item_rate_plan_details"
                 tools:itemCount="1"
                 android:layout_marginTop="15dp"
                 android:layout_marginHorizontal="20dp"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 android:orientation="vertical"
-                app:layout_constraintTop_toBottomOf="@id/heading1"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+                app:layout_constraintTop_toBottomOf="@id/heading1"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
@@ -533,4 +532,5 @@
     </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
 </androidx.core.widget.NestedScrollView>
