--- a/app/src/main/res/layout/dilog_bulk_update.xml
+++ b/app/src/main/res/layout/dilog_bulk_update.xml
@@ -233,7 +233,7 @@
                                         android:src="@drawable/svg_remove" />
 
                                     <EditText
-                                        android:id="@+id/propertyCountEditText"
+                                        android:id="@+id/count_AddRoom"
                                         style="@style/TextAppearance.AppCompat.Body1"
                                         android:layout_width="@dimen/countingEditTextWidth"
                                         android:layout_height="wrap_content"
@@ -392,11 +392,13 @@
                                             android:fontFamily="@font/roboto"
                                             android:textColor="@color/black"
                                             android:textSize="16sp"/>
-                                        <TextView
+                                        <EditText
+                                            android:id="@+id/baseRatePrice"
                                             android:layout_width="wrap_content"
                                             android:layout_height="wrap_content"
                                             android:fontFamily="@font/roboto"
                                             android:text="1,999.00"
+                                            android:background="@color/primaryBackground"
                                             android:textColor="@color/black"
                                             android:textSize="16sp"/>
                                     </LinearLayout>
@@ -449,11 +451,13 @@
                                             android:fontFamily="@font/roboto"
                                             android:textColor="@color/black"
                                             android:textSize="16sp"/>
-                                        <TextView
+                                        <EditText
+                                            android:id="@+id/baseAdultPrice"
                                             android:layout_width="wrap_content"
                                             android:layout_height="wrap_content"
                                             android:fontFamily="@font/roboto"
                                             android:text="1,999.00"
+                                            android:background="@color/primaryBackground"
                                             android:textColor="@color/black"
                                             android:textSize="16sp"/>
                                     </LinearLayout>
@@ -506,11 +510,13 @@
                                             android:fontFamily="@font/roboto"
                                             android:textColor="@color/black"
                                             android:textSize="16sp"/>
-                                        <TextView
+                                        <EditText
+                                            android:id="@+id/baseChildPrice"
                                             android:layout_width="wrap_content"
                                             android:layout_height="wrap_content"
                                             android:fontFamily="@font/roboto"
                                             android:text="1,999.00"
+                                            android:background="@color/primaryBackground"
                                             android:textColor="@color/black"
                                             android:textSize="16sp"/>
                                     </LinearLayout>
