--- a/app/src/main/res/layout/fragment_rates_and_inventory.xml
+++ b/app/src/main/res/layout/fragment_rates_and_inventory.xml
@@ -32,6 +32,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="15dp"
         android:layout_marginEnd="20dp"
+        app:strokeWidth="0dp"
         android:backgroundTint="@color/cardbackcolor"
         >
 
@@ -39,7 +40,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Bulk Update"
-            android:padding="15dp"
+            android:padding="10dp"
             android:fontFamily="@font/roboto_bold"
             android:textSize="@dimen/H5"
             android:textColor="@color/primaryBackground"
@@ -47,22 +48,6 @@
             />
 
     </com.google.android.material.card.MaterialCardView>
-    
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Stop Sell"
-        app:layout_constraintEnd_toStartOf="@+id/bulkUpdate_card"
-        app:layout_constraintTop_toTopOf="@id/bulkUpdate_card"
-        app:layout_constraintBottom_toBottomOf="@id/bulkUpdate_card"
-        android:layout_marginEnd="15dp"
-        android:textColor="@color/black"
-        android:textSize="@dimen/H5"
-        android:fontFamily="@font/roboto_bold"
-        android:textFontWeight="500"
-        />
-
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/source_layout"
@@ -164,11 +149,12 @@
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/save_card"
         android:layout_width="wrap_content"
-        android:layout_height="50dp"
+        android:layout_height="40dp"
         android:background="@drawable/button_background"
         app:layout_constraintTop_toBottomOf="@id/bulkUpdate_card"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="15dp"
+        app:strokeWidth="0dp"
         android:layout_marginEnd="20dp"
         android:backgroundTint="@color/cardbackcolor"
         >
@@ -179,7 +165,7 @@
             android:text="Save"
             android:layout_gravity="center"
             android:paddingHorizontal="20dp"
-            android:fontFamily="@font/roboto_bold"
+            android:fontFamily="@font/roboto_medium"
             android:textSize="@dimen/H5"
             android:textColor="@color/primaryBackground"
             />
