--- a/app/src/main/res/layout/item_roomplan_price.xml
+++ b/app/src/main/res/layout/item_roomplan_price.xml
@@ -148,8 +148,16 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_weight="0.2"
+                android:visibility="gone"
                 android:background="@drawable/inventory_edit_background"
                 android:text="2000" />
+            <com.google.android.material.checkbox.MaterialCheckBox
+                android:id="@+id/checkBox_1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:visibility="gone"
+                />
     </com.google.android.material.card.MaterialCardView>
 
         <com.google.android.material.card.MaterialCardView
@@ -172,7 +180,16 @@
                 android:layout_gravity="center"
                 android:layout_weight="0.2"
                 android:background="@drawable/inventory_edit_background"
+                android:visibility="gone"
                 android:text="2000" />
+
+            <com.google.android.material.checkbox.MaterialCheckBox
+                android:id="@+id/checkBox_2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:visibility="gone"
+                />
 
         </com.google.android.material.card.MaterialCardView>
 
@@ -196,7 +213,17 @@
                 android:layout_gravity="center"
                 android:layout_weight="0.2"
                 android:background="@drawable/inventory_edit_background"
-                android:text="2000" />
+                android:text="2000"
+                android:visibility="gone"
+                />
+
+            <com.google.android.material.checkbox.MaterialCheckBox
+                android:id="@+id/checkBox_3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:visibility="gone"
+                />
 
     </com.google.android.material.card.MaterialCardView>
 
@@ -221,7 +248,15 @@
                 android:layout_gravity="center"
                 android:layout_weight="0.2"
                 android:background="@drawable/inventory_edit_background"
+                android:visibility="gone"
                 android:text="2000" />
+            <com.google.android.material.checkbox.MaterialCheckBox
+                android:id="@+id/checkBox_4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:visibility="gone"
+                />
         </com.google.android.material.card.MaterialCardView>
 
         <com.google.android.material.card.MaterialCardView
@@ -244,7 +279,16 @@
                 android:layout_gravity="center"
                 android:layout_weight="0.2"
                 android:background="@drawable/inventory_edit_background"
+                android:visibility="gone"
                 android:text="2000" />
+
+            <com.google.android.material.checkbox.MaterialCheckBox
+                android:id="@+id/checkBox_5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:visibility="gone"
+                />
 
     </com.google.android.material.card.MaterialCardView>
         <com.google.android.material.card.MaterialCardView
@@ -266,8 +310,16 @@
                 android:layout_gravity="center"
                 android:layout_weight="0.2"
                 android:background="@drawable/inventory_edit_background"
-                android:text="2000" />
-
+                android:text="2000"
+                android:visibility="gone"
+                />
+            <com.google.android.material.checkbox.MaterialCheckBox
+                android:id="@+id/checkBox_6"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:visibility="gone"
+                />
         </com.google.android.material.card.MaterialCardView>
 
         <com.google.android.material.card.MaterialCardView
@@ -290,7 +342,16 @@
                 android:layout_gravity="center"
                 android:layout_weight="0.2"
                 android:background="@drawable/inventory_edit_background"
-                android:text="2000" />
+                android:text="2000"
+                android:visibility="gone"
+                />
+            <com.google.android.material.checkbox.MaterialCheckBox
+                android:id="@+id/checkBox_7"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:visibility="gone"
+                />
     </com.google.android.material.card.MaterialCardView>
 
         <com.google.android.material.card.MaterialCardView
@@ -313,7 +374,16 @@
                 android:layout_gravity="center"
                 android:layout_weight="0.2"
                 android:background="@drawable/inventory_edit_background"
-                android:text="2000" />
+                android:text="2000"
+                android:visibility="gone"
+                />
+            <com.google.android.material.checkbox.MaterialCheckBox
+                android:id="@+id/checkBox_8"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:visibility="gone"
+                />
     </com.google.android.material.card.MaterialCardView>
 
         <com.google.android.material.card.MaterialCardView
@@ -333,8 +403,17 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:visibility="gone"
                 android:background="@drawable/inventory_edit_background"
                 android:text="2000" />
+
+            <com.google.android.material.checkbox.MaterialCheckBox
+                android:id="@+id/checkBox_9"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:visibility="gone"
+                />
 
         </com.google.android.material.card.MaterialCardView>
 
@@ -356,8 +435,15 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:background="@drawable/inventory_edit_background"
+                android:visibility="gone"
                 android:text="2000" />
-
+            <com.google.android.material.checkbox.MaterialCheckBox
+                android:id="@+id/checkBox_10"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:visibility="gone"
+                />
         </com.google.android.material.card.MaterialCardView>
 
 
